--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
       <footer class="footer" id="footer">
         <div class="container">
           <div class="footer-text padd-15">
-            <p>copyright © Tacode. All rigths reserved</p>
+            <p>copyright © T2M8. All rigths reserved</p>
           </div>
         </div>
       </footer>
@@ -767,7 +767,5 @@
 
     <!--=============== JS ===============-->
     <script src="assets/js/main.js"></script>
-    <!--=============== Api JS ===============-->
-    <script src="api.js"></script>
   </body>
 </html>
